@@ -14,9 +14,9 @@
     ApplicationDescription = "[GNUstep | Graphical] Object Relationship Modeller";
     ApplicationIcon = "Gorm.tiff";
     ApplicationName = "Gorm";
-    ApplicationRelease = "Gorm 0.13.1 (Alpha)";
+    ApplicationRelease = "Gorm 0.13.2 (Alpha)";
     Authors = ("Gregory John Casamento <greg_casamento@yahoo.com>","Richard Frith-Macdonald <rfm@gnu.org>","Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>");
     Copyright = "Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005 FSF";
     CopyrightDescription = "Released under the GNU General Public License 2.0";
-    NSBuildVersion = "0.13.1 Aug 07 2005";
+    NSBuildVersion = "0.13.2 Aug 18 2005";
 }
